Adding constraint checks

--- a/src/NuGet.Clients/PackageManagement.UI/Resources.resx
+++ b/src/NuGet.Clients/PackageManagement.UI/Resources.resx
@@ -617,4 +617,11 @@ Packages installed into Website projects will not be restored during build. Cons
   <data name="Text_PackageFormatApply" xml:space="preserve">
     <value>The package manager format will apply to the following projects in this Solution</value>
   </data>
+  <data name="Version_AutoReferenced" xml:space="preserve">
+    <value>{0} (AutoReferenced)</value>
+    <comment>0 - package version</comment>
+  </data>
+  <data name="Version_Blocked_Generic" xml:space="preserve">
+    <value>Blocked</value>
+  </data>
 </root>
